# ComputedTomography

./: CMakeLists.txt  README.md
include/: EDFhandler.h  Gantry.h  IOutilities.h  MainWindow.h  Raytracer.h  volume.h
include/Acquisition/: Acquisition.h  detectorWidget.h  pose.h
include/Reconstruction/: Reconstruction.h  base.h  normalReconstruction.h  projection.h  regularizedReconstruction.h  sliceViewer.h
include/Visualization/: TransferFunction.h  Visualization.h  imageViewer.h  rendering.h
src/: EDFhandler.cpp  Gantry.cpp  MainWindow.cpp  Raytracer.cpp  main.cpp  volume.cpp
src/Acquisition/: Acquisition.cpp  detectorWidget.cpp  pose.cpp
src/Reconstruction/: Reconstruction.cpp  base.cpp  normalReconstruction.cpp  projection.cpp  regularizedReconstruction.cpp  sliceViewer.cpp
src/Visualization/: TransferFunction.cpp  Visualization.cpp  imageViewer.cpp  rendering.cpp
